# iterative_methods_rs

./: .gitignore  ARCHITECTURE.md  COPYING  Cargo.toml  LICENSE_APACHE.md  LICENSE_MIT.md  Plan.org  README.md  feedback_loop.sh  moments_test_main.rs  pull_request_template.md
.github/workflows/: rust.yml
examples/: conjugate_gradient_method.rs  conjugate_gradient_method_for_blog.rs  derivative_descent.rs  fibonacci.rs  reservoir_histogram_animation.rs  reservoir_sampling_mean_convergence.rs  reservoir_sampling_visualizations.rs  weighted_reservoir_sampling.rs  weighted_reservoir_sampling_visualizations.rs  weighting_samples.rs  wrs_animation.rs  wrs_hist_animation.rs  wrs_histogram_animation.rs  wrs_mean_convergence.rs
src/: algorithms.rs  conjugate_gradient.rs  derivative_descent.rs  lib.rs  main.rs  utils.rs
tests/: integration_tests.rs
visualizations/: README.md
visualizations_python/: requirements.txt  reservoir_histogram_animation.py  reservoir_histograms_initial_final.py  reservoir_means.py  reservoir_sampling_mean_convergence.py  util.py  wrs_animation.py  wrs_hist_animation.py  wrs_mean_convergence.py
