[package]
name = "iterative_methods"
version = "0.1.0"
authors = ["Daniel Vainsencher <daniel.vainsencher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streaming-iterator = "0.1.0"
rand = "0.8.0"
rand_pcg = "0.3.0"

[dependencies.ndarray-linalg]
version = "0.12.1"
features = ["openblas-static"]

[dependencies.ndarray]
version = "0.13.0"
features = ["blas", "approx"]
default-features = false

[dev-dependencies]
quickcheck = "= 1.0.1"
