[package]
name = "iterative_methods"
version = "0.2.0"
authors = ["Daniel Vainsencher <daniel.vainsencher@gmail.com>", "Daniel Fox <danielfox@thoughtstoodefinite.com>"]
edition = "2018"
description = "Iterative methods and associated utilities as StreamingIterators."
license = "MIT OR Apache-2.0"
keywords = ["math","stream","machine-learning","algorithm","optimization"]
[lib]
name = "iterative_methods"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streaming-iterator = "0.1.0"
yaml-rust = "0.4"
rand = "0.8.0"
rand_pcg = "0.3.0"
rand_distr = "0.4.0"
nalgebra = "0.19.0"
eigenvalues = "0.3.1"

[dependencies.ndarray]
version = "0.13.0"
default-features = false

[dev-dependencies]
quickcheck = "= 1.0.1"
